# kamaelia_

./: AUTHORS  COPYING  README.md
Code/: README
Code/CPP/Scratch/: README  generators.cpp  generators.hpp  miniaxon.cpp  miniaxon.readme
Code/Python/Axon/: MANIFEST.in  Makefile  setup.py  stdeb.cfg
Code/Python/Kamaelia/: MANIFEST.in  Makefile  setup.py  stdeb.cfg
Code/Ruby/: miniaxon.rb
Code/interim-build/: build-interim-release.sh  interim-tarball-readme
Sketches/: README  syncmail.test  test  test.py  tomg.py
Sketches/AB/: trunkbug.txt
Sketches/AB/Bluetooth/: Bluetooth.py
Sketches/AB/Pygame-Calibration-Lite/: Calibrate.py
Sketches/AM/KPIFramework/: setup.py
Sketches/AM/KPIPackage/: setup.py
Sketches/AM/aes/: aesint.c  aesint.h  aesmod.pyx  aesxam.c  build.sh  buildtest.sh  keygen.c  keygen.h  makefile  readme.txt  test.c  time_test.c
Sketches/AM/xtea/: setup.py  test.py  xtea.py
Sketches/AM/xxtea/: INSTALL  README  TODO
Sketches/CE/: Display6nokia.py  PygameClient.py  README  RunServer.bat  Server.py  XPlatformClient.py  miniaxon_scriptview.py  pygame_display.py  scriptview.py  twelfthnight.txt
Sketches/CE/servercontent/: 1.txt  10.txt  100.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  OSFR.mpg
Sketches/CL/MiniAxon/: MiniAxon.py  MiniAxon_Tester.py  SimpleTranslator.py
Sketches/Contrib/Debian/: build-axon-debs.sh  build-kamaelia-debs.sh  (+2 more)
Sketches/DK/: Process.py
Sketches/DL/: miniaxon.py
Sketches/GDS/: mini_http.py
Sketches/JL/: Responder.py  graphline.py  keyEventTest.py  pauseTest.py  pipeline.py
Sketches/JMB/: SignalsExample.py  db.py  outboxbundle.py  protocol_manager.py  request-lf.txt  simplechat.py  state_machine.py
Sketches/JT/: README
Sketches/JTL/: HTTPServer.py  README  SubtitleColourDecoderComponent.py  SubtitleTicker.py  ThreadedComponent.py  ThreadedTCPClient.py
Sketches/MH/: CRID_fetcher.py  DVB_EIT.py  DemoShutdown.py  Deprecate.py  Deprecation.py  KPI.py  SIP Prodder.py  ServiceWrapper.py  Speex.py  TimerMixIn.py  TimerMixIn2.py  TopologyPVR.py  ircShakespeare.py  shutdownKludge.py  test  test_TopologyPVR.py
Sketches/MPS/: BackplaneTuner.py  CamRecord.py  CheckpointSequencer.py  ConnectedServer.py  DemuxRemuxTuple.py  DiracMessageCounter.py  DocExtractor.py  IRCSpeakerBot.py  OpenGLPygame.py  Philosophers.py  Pong.py  Repository.py  SantaProblem.py  ScrollyTkMenu.py  SlowProcessingServer.py  SocketTesting.txt  Synchronous.py  Ticker.py  Tracing.py  UDP.py  WebCam.py  decorators.py  parsetestResults.py  test
Sketches/MPS/Old/Vorbis/vorbissimple/libvorbissimple/: ChangeLog  Makefile.am  aclocal.m4  configure.ac
Sketches/MPS/Old/Vorbis/vorbissimple/libvorbissimple/src/: Makefile.am  Makefile.in  simple_decoder.c
Sketches/MPS/Old/Vorbis/vorbissimple/libvorbissimple/src/libvorbissimple/: Makefile.in  vorbissimple.c
Sketches/Old/: AO_TEST.py  EchoCheckerProtocolComponent.py  KamaeliaDoc.py  PygameTest.py  StreamingTextServer.py  SubtitleFilter.py  SubtitleFilterComponent.py  TagFilterComponent.py  simple_decoder.py
Sketches/PT/: helloworld.py  miniaxon.py  sadns.py  testhttpclient.py
Sketches/RJL/: TCPServer.py  setup.py
Sketches/TG/: threadedweather.py  weather-mps.py  weather.py
Tests/: README
Tests/Python/: README
Website/: AUTHORS  AnsweredQuestions.html  Axon-1.1.2-ReleaseNotes.html  Axon-1.5.0-ReleaseNotes.html  AxonShell.html  AxonVisualiser.html  COPYING  Components.html  Contact.html  Cookbook.html  DocumentationGuidelines.html  DocumentationStatus.html  Download.html  GettingStarted.html  GettingStartedInclude.html  IRC.html  Introduction.html  Kamaelia-0.2.0-ReleaseNotes.html  Kamaelia-0.3.0-ReleaseNotes.html  Kamaelia-0.4.0-ReleaseNotes.html  KamaeliaFirenze.sxi  KamaeliaMacro.html  KamaeliaOverview.html  KamaeliaProjectDevelopment.html  KamaeliaProjectProcesses.html  KamaeliaStatus.html  Licensing.html  Meetings.html  MiniAxon.html  MiniAxonFull.html  News.html  OpenTech2005.html  OtherNews.html  ProjectAdmin.html  PyrexComponents.html  Repository.html  SimpleReliableMulticast.html  Sitemap.html  SummerOfCode.html  SummerOfCode2006.html  (+15 more)
Website/Challenges/: Challenges.html  ChangingTechnologies.html  ChoiceIsChallenge.html  ContentSharing.html  DeliverTheArchive.html  Foreword.html  MooresLawAtHomeVsDesireForQuality.html  P2PandMulticastTogether.html  ProprietaryPastOpenFuture.html  Summary.html  WhosFreeLunchIsOver.html  index.html
Website/Components/: Kamaelia.Chassis.Carousel.Carousel.html  MethodNote.html  index.html
Website/Docs/: Axon.html  DocImageMap.html  NetworkProtocolModules.html  index.html
Website/Examples/: BuildingACustomisedTopologyViewer.html  DiracVideoEncodeAndDecodeChain.html  FortuneCookieProtocolClientServer.html  IntrospectingASimpleStreamingSystem.html  MulticastOggVorbisClientServerScripts.html  MulticastOggVorbisServer.html  NetworkControllableGraphViewer.html  OggVorbisTCPClientServer.html  OggVorbisTCPScripts.html  SimpleBouncingCatsGame.html  SimpleClientForSavingContentsOfTCPStream.html  SimpleReliableMulticastExample.html  SimpleStreamerWithPlaylistCapability.html  SimpleTextTickerDemonstration.html  SimplestPossibleDiracVideoPlayer.html  SimplestPresentationTool.html  TopologyAndSlidesPresentationTool.html  TopologySlideshowComponent.html  UDPSimplePeerExample.html
Website/MiniAxon/: BlankAnswer.html  Component.html  ComponentAnswer.html  Interlude.html  InterludeTwo.html  Introduction.html  Microprocess.html  MicroprocessAnswer.html  Postman.html  PostmanAnswer.html  Scheduler.html  SchedulerAnswer.html  Summary.html  index.html
Website/c.l.p.a/: 200412.html  20050105.html  20050110.html
(+2296 files in other folders)
